wip: making dao which interfaces with user specific properties file : TODO passing all tests